# project-factory

./: .gitignore  Cargo.toml  README.md
conf/: logstash.conf  rules.yara  unix_conf.yaml  windows_conf.yaml
jq/: filter.jq  jlecmd.jq  lecmd.jq  mftecmd.jq  pecmd.jq  syslog.jq
src/: channel.rs  input.rs  main.rs  output.rs  plugin.rs  pre_process.rs  process.rs  task.rs  thread.rs  walk.rs
