[package]
name = "project-factory"
version = "0.1.0"
edition = "2018"


[dependencies]
serde = { version = "^1.0.69", features = ["derive"] }
serde_yaml = "^0.8.7"
getopts = "^0.2.21"
tar = "^0.4.35"
log = "^0.4.8"
env_logger = "^0.9.0"
threadpool = "^1.8.1"
num_cpus = "^1.13.0"
yara = "^0.9.0"
yara-sys = { version = "^0.8.0", features = ["bundled-4_1_1"] }