[package]
name = "project-factory"
version = "0.1.0"
edition = "2018"


[dependencies]
serde = { version = "^1.0.69", features = ["derive"] }
serde_yaml = "^0.8.7"
serde_json = "^1.0.66"
getopts = "^0.2.21"
log = "^0.4.8"
env_logger = "^0.9.0"
num_cpus = "^1.13.0"
rand = "^0.8.4"
walkdir = "^2.3.2"
crossbeam-channel = "^0.5.1"
regex = "^1.5.4"